--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <title>Titlu fereastra</title>
         <meta charset="UTF-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- va fi explicat când ajungem la CSS -->
-        <meta name="keywords" content=""><!--cuvintele cheie ale paginii; majoritatea motoarelor de căutare ignoră keywords -->
-        <!--"internet, tehnici web, HTML, taguri"-->
-        <meta name="description" content=""><!-- descrierea paginii, adesea apare sub link când sunt afișate rezultatele căutării -->
+        <meta name="keywords" content="carte, carti, manga, carte in engleza, carti in engleza"><!--cuvintele cheie ale paginii; majoritatea motoarelor de căutare ignoră keywords -->
+        <meta name="description" content="Librarie online pentru carti in engleza, benzi desenate si manga.">
+        <!-- descrierea paginii, adesea apare sub link când sunt afișate rezultatele căutării -->
         <!--descrierea este limitata ca marime-->
-        <meta name="author" content="Sandu Bianca">  <!-- autorul/autoarea paginii -- este clientul, nu dezvoltatorul-->
+        <meta name="author" content="Bianca S.">
         <link rel="icon" type="image/png" href="./resurse/imagini/favicon/favicon-96x96.png" sizes="96x96" />
         <link rel="icon" type="image/svg+xml" href="./resurse/imagini/favicon/favicon.svg" />
         <link rel="shortcut icon" href="./resurse/imagini/favicon/favicon.ico" />
@@ -21,7 +21,7 @@
     </head>
     <body>
         <header>
-            <h1>Titlul paginii</h1>
+            <h1>Librarie online</h1>
             <nav>
                 <ul> <!--afiseaza cu bullet points, ol afiseaza cu numere-->
                     <li>
@@ -44,7 +44,8 @@
                 <h2>Titlu sectiune 1</h2>
                 <p>Un paragraf.</p>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas esse totam assumenda, obcaecati veniam possimus, eaque nesciunt, sequi adipisci perspiciatis at placeat sed tempora a. Porro nulla voluptates quibusdam! Modi!</p>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas esse totam assumenda, obcaecati veniam possimus, eaque nesciunt, sequi adipisci perspiciatis at placeat sed tempora a. Porro nulla voluptates quibusdam! Modi!</p>
+                    <p><b>Librarie</b> <i>online</i> pentru pasionatii de citit!
+                        Aici vei gasi o mare colectie de <b>carti in engleza</b>, <b>benzi desenate</b> din seriile copilariei si volume <b><i>manga</i></b> pentru pasionatii de <i>anime</i> si doritorii de actiune!</p>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas esse totam assumenda, obcaecati veniam possimus, eaque nesciunt, sequi adipisci perspiciatis at placeat sed tempora a. Porro nulla voluptates quibusdam! Modi!</p>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas esse totam assumenda, obcaecati veniam possimus, eaque nesciunt, sequi adipisci perspiciatis at placeat sed tempora a. Porro nulla voluptates quibusdam! Modi!</p>
                 <section id="subsectiune1">
