Adaugat tag s si ins

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <h3>Inspiratie</h3>
                     <p>Initiativa de a crea aceasta afacere a venit dintr-o pasiune personala a copilariei, cititul. Intrand in adolescenta, am realizat ca am prefera sa citim o <b>carte in engleza</b> in schimbul uneia in limba romana, din dorinta de a ne imbunatatii abilitatile lingvistice. In acelasi timp, am descoperit lumea plina de actiune a <i lang="ja">anime</i>-urilor si a principalei inspiratii a lor, seriile <b><i lang="ja">manga</i></b>, a caror comunitate de fani este inca crescanda in tara.</p>
                     <p>
-                        De asemenea, benzile desenate, volumele ilustrate sau manga sunt o mare treapta ajutatoare in invatarea unei alte limbi. Mai multe detalii:
+                        De asemenea, benzile desenate, volumele ilustrate sau manga sunt <s>de mare ajutor</s> <ins>o treapta ajutatoare</ins> in invatarea unei alte limbi. Mai multe detalii:
                     </p>
-                    <iframe id="video" width="710" height="412" src="https://www.youtube.com/embed/gJpFboFcGfE" title="Are Graphic Novels... Novels? (Feat. Princess Weekes) | It&#39;s Lit" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe id="video" width="710" height="412" src="https://www.youtube.com/embed/gJpFboFcGfE" title="Are Graphic Novels... Novels? (Feat. Princess Weekes) | It&#39;s Lit" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </section>
                 <section id="ceoferim">
                     <h3>Ce oferim</h3>
