Schimbat sectiune in div

--- a/index.html
+++ b/index.html
@@ -37,17 +37,19 @@
             </nav>
         </header>
         <main>
-            <section id="sec1">
-                <h2>Despre noi</h2>
-                <p><b>Librarie</b> <i>online</i> pentru pasionatii de citit!
-                    Aici vei gasi o mare colectie de <b>carti in engleza</b>, <b>benzi desenate</b> din seriile copilariei si volume <b><i lang="ja">manga</i></b> pentru pasionatii de <i lang="ja">anime</i> si doritorii de actiune!</p>
+            <div id="grid_pag">
+                <section id="desprenoi">
+                    <h2>Despre noi</h2>
+                    <p><b>Librarie</b> <i>online</i> pentru pasionatii de citit!
+                        Aici vei gasi o mare colectie de <b>carti in engleza</b>, <b>benzi desenate</b> din seriile copilariei si volume <b><i lang="ja">manga</i></b> pentru pasionatii de <i lang="ja">anime</i> si doritorii de actiune!</p>
+                </section>
                 <section id="inspiratie">
                     <h3>Inspiratie</h3>
                     <p>Initiativa de a crea aceasta afacere a venit dintr-o pasiune personala a copilariei, cititul. Intrand in adolescenta, am realizat ca am prefera sa citim o <b>carte in engleza</b> in schimbul uneia in limba romana, din dorinta de a ne imbunatatii abilitatile lingvistice. In acelasi timp, am descoperit lumea plina de actiune a <i lang="ja">anime</i>-urilor si a principalei inspiratii a lor, seriile <b><i lang="ja">manga</i></b>, a caror comunitate de fani este inca crescanda in tara.</p>
                     <p>
                         De asemenea, benzile desenate, volumele ilustrate sau manga sunt <s>de mare ajutor</s> <ins>o treapta ajutatoare</ins> in invatarea unei alte limbi. Mai multe detalii:
                     </p>
-                    <iframe id="video" width="710" height="412" src="https://www.youtube.com/embed/gJpFboFcGfE" title="Are Graphic Novels... Novels? (Feat. Princess Weekes) | It&#39;s Lit" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe id="video" width="550" height="350" src="https://www.youtube.com/embed/gJpFboFcGfE" title="Are Graphic Novels... Novels? (Feat. Princess Weekes) | It&#39;s Lit" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </section>
                 <section id="ceoferim">
                     <h3>Ce oferim</h3>
@@ -55,7 +57,7 @@
                     Destinata fanilor de toate varstele, <b>libraria FansTOME</b> nu este un simplu <b>magazin</b> de carti, ci un loc unde acestia isi pot satisface pofta imaginatiei prin anumite piese media ce nu sunt gasite peste tot in Romania. <b>FansTOME</b> ofera posibilitatea raspandirii 
                     </p>
                 </section>
-            </section>
+            </div>
             
             <br><br>
             <figure>
@@ -67,9 +69,7 @@
                 </picture>
                 <figcaption id="caption">Carti</figcaption>
             </figure>
-            
 
-               <!-- bonus MATHML formula discount -->
         </main>
         <footer>
             <a id="salt" href="#"><b>Salt sus</b></a><br>
