--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
                     <p>
                         De asemenea, benzile desenate, volumele ilustrate sau manga sunt <s>de mare ajutor</s> <ins>o treapta ajutatoare</ins> in invatarea unei alte limbi. Mai multe detalii:
                     </p>
-                    <iframe id="video" width="550" height="350" src="https://www.youtube.com/embed/gJpFboFcGfE" title="Are Graphic Novels... Novels? (Feat. Princess Weekes) | It&#39;s Lit" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <div class="iframe-container">
+                        <div class="taburi">
+                            <a href="https://www.youtube.com/embed/gJpFboFcGfE" target="video">Graphic Novels</a>
+                            <a href="https://www.youtube.com/embed/8OYEBRdAlNk" target="video">History</a><br>
+                        </div>
+                            <iframe id="video" width="550" height="350" src="https://www.youtube.com/embed/gJpFboFcGfE" title="Are Graphic Novels... Novels? (Feat. Princess Weekes) | It&#39;s Lit" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <!-- <iframe id="video2" width="550" height="350" src="https://www.youtube.com/embed/8OYEBRdAlNk" title="A brief history of graphic novels 💬" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+                    </div>
                 </section>
                 <section id="ceoferim">
                     <h3>Ce oferim</h3>
