--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
                             <a href="https://www.youtube.com/embed/gJpFboFcGfE" target="video">Graphic Novels</a>
                             <a href="https://www.youtube.com/embed/8OYEBRdAlNk" target="video">History</a><br>
                         </div>
-                            <iframe id="video" width="550" height="350" src="https://www.youtube.com/embed/gJpFboFcGfE" title="Are Graphic Novels... Novels? (Feat. Princess Weekes) | It&#39;s Lit" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                            <!-- <iframe id="video2" width="550" height="350" src="https://www.youtube.com/embed/8OYEBRdAlNk" title="A brief history of graphic novels 💬" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> -->
+                            <iframe name="video" id="video" width="550" height="350" src="https://www.youtube.com/embed/gJpFboFcGfE" title="Are Graphic Novels... Novels? (Feat. Princess Weekes) | It&#39;s Lit" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </section>
                 <section id="ceoferim">
