--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     </p>
                     <div class="iframe-container">
                         <div class="taburi">
-                            <a href="https://www.youtube.com/embed/gJpFboFcGfE" target="video">Graphic Novels</a>
-                            <a href="https://www.youtube.com/embed/8OYEBRdAlNk" target="video">History</a><br>
+                            <a id="tab_video1" href="https://www.youtube.com/embed/gJpFboFcGfE" target="video">Graphic Novels</a>
+                            <a id="tab_video2" href="https://www.youtube.com/embed/8OYEBRdAlNk" target="video">History</a><br>
                         </div>
                             <iframe name="video" id="video" width="550" height="350" src="https://www.youtube.com/embed/gJpFboFcGfE" title="Are Graphic Novels... Novels? (Feat. Princess Weekes) | It&#39;s Lit" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
