Adaugat link css specific

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         
                     </li>
                     <li>
-                        <a href="" id="pag2">Despre noi</a>
+                        <a href="#desprenoi" id="pag2">Despre noi</a>
                         <ul>
                             <li><a href="#inspiratie" id="secinsp">Inspiratie</a></li>
                             <li><a href="#ceoferim" id="secofer">Ce oferim</a></li>
