Adaugat font link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <link rel="stylesheet" href="./resurse/css/general500.css" type="text/css" media="screen and (max-width:500px)"/>
         <link rel="stylesheet" href="./resurse/css/nav.css" type="text/css" />
         <link rel="stylesheet" href="./resurse/css/nav500.css" type="text/css" media="screen and (max-width:500px)"/>
-        <!-- #8c5e5e cod background - paleta de culori pt css -->
+        <!-- FONT PRIN GOOGLE API -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Barrio&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- Împărțiți body-ul în header, main, footer. -->
