--- a/index.html
+++ b/index.html
@@ -66,8 +66,67 @@
                     </figure>
                 </div>
                 <div class="zona" id="zona2"> <!--TABEL-->
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi soluta aut, voluptate, qui eum officia iusto iste autem repudiandae non cum illo beatae earum inventore libero. Adipisci repellat molestiae ratione.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi soluta aut, voluptate, qui eum officia iusto iste autem repudiandae non cum illo beatae earum inventore libero. Adipisci repellat molestiae ratione.</p>              
+                    <table class="tabel">
+                        <caption> OFERTE SAPTAMANALE </caption>
+                        <thead>
+                            <tr>
+                                <!--TABEL DE OFERTE ZILNICE!!-->
+                                <th></th>
+                                <th>ZIUA</th>
+                                <th>ORA*</th>
+                                <th>OFERTA</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>LUNI</td>
+                                <td>8:00 - 22:00</td>
+                                <td>insert oferta</td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>MARTI</td>
+                                <td>8:00 - 22:00</td>
+                                <td>insert oferta</td>
+                            </tr>
+                            <tr>
+                                <td>3</td>
+                                <td>MIERCURI</td>
+                                <td>8:00 - 22:00</td>
+                                <td>insert oferta</td>
+                            </tr>
+                            <tr>
+                                <td>4</td>
+                                <td>JOI</td>
+                                <td>8:00 - 22:00</td>
+                                <td>insert oferta</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>VINERI</td>
+                                <td>8:00 - 22:00</td>
+                                <td>insert oferta</td>
+                            </tr>
+                            <tr>
+                                <td>6</td>
+                                <td>SAMBATA</td>
+                                <td>Toata ziua</td>
+                                <td>insert oferta</td>
+                            </tr>
+                            <tr>
+                                <td>7</td>
+                                <td>DUMINICA</td>
+                                <td>Toata ziua</td>
+                                <td>insert oferta</td>
+                            </tr>
+                        </tbody>
+                        <tfoot>
+                            <tr>
+                                <td colspan="4">*Ofertele sunt valabile in intervalul de timp precizat, orele sunt in functie de fusul orar UTC+2</td>
+                            </tr>
+                        </tfoot>
+                    </table>           
                 </div>
                 <div class="zona" id="zona3"> <!--CALENDAR-->
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi soluta aut, voluptate, qui eum officia iusto iste autem repudiandae non cum illo beatae earum inventore libero. Adipisci repellat molestiae ratione.</p>
