Modificari iframe video

--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
                 </div>
                 <div class="zona" id="zona3"> <!--CALENDAR-->
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi soluta aut, voluptate, qui eum officia iusto iste autem repudiandae non cum illo beatae earum inventore libero. Adipisci repellat molestiae ratione.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi soluta aut, voluptate, qui eum officia iusto iste autem repudiandae non cum illo beatae earum inventore libero. Adipisci repellat molestiae ratione.</p>
                 </div>
                 <div class="zona" id="zona4"> <!--ANUNTURI-->
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi soluta aut, voluptate, qui eum officia iusto iste autem repudiandae non cum illo beatae earum inventore libero. Adipisci repellat molestiae ratione.</p>
@@ -141,6 +140,7 @@
                 </div>
                 <div class="zona" id="zona6"> <!--user statistics-->
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum possimus consectetur sapiente, necessitatibus, molestiae odio harum quas, expedita maxime cupiditate suscipit sequi ullam deleniti ipsam molestias! Ratione corporis inventore facere.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi soluta aut, voluptate, qui eum officia iusto iste autem repudiandae non cum illo beatae earum inventore libero. Adipisci repellat molestiae ratione.</p>
                 </div>
                 <div class="zona" id="zona7"> <!--date site-->
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam corrupti quidem rem eos nam explicabo illo! Porro perspiciatis ab atque aliquid voluptatibus nobis magni illum autem? Vel sequi ipsa optio?</p>
@@ -166,9 +166,9 @@
                         <div class="container-iframe">
                             <div class="taburi-iframe">
                                 <a id="tab_video1" href="https://www.youtube.com/embed/gJpFboFcGfE" target="video">Graphic Novels</a>
-                                <a id="tab_video2" href="https://www.youtube.com/embed/8OYEBRdAlNk" target="video">History</a><br>
+                                <a id="tab_video2" href="https://www.youtube.com/embed/8OYEBRdAlNk" target="video">History</a>
                             </div>
-                                <iframe name="video" id="video" width="550" height="350" src="https://www.youtube.com/embed/gJpFboFcGfE" title="Are Graphic Novels... Novels? (Feat. Princess Weekes) | It&#39;s Lit" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe name="video" id="video" src="https://www.youtube.com/embed/gJpFboFcGfE" title="Are Graphic Novels... Novels? (Feat. Princess Weekes) | It&#39;s Lit" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                     </section>
                     <section id="ceoferim">
