--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="librarie, magazin, banda desenata, benzi desenate, carte, carti, manga, carte in engleza, carti in engleza">
         <meta name="description" content="Librarie online pentru carti in engleza, benzi desenate si manga.">
         <meta name="author" content="Bianca S.">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
         <!-- Adaugati un favicon relevant pentru temă. Folosiți https://realfavicongenerator.net pentru a genera toate dimensiunile necesare de favicon și codul compatibil pentru diversele browsere și sisteme de operare. -->
         <link rel="icon" type="image/png" href="./resurse/imagini/favicon/favicon-96x96.png" sizes="96x96">
         <link rel="icon" type="image/svg+xml" href="./resurse/imagini/favicon/favicon.svg">
@@ -17,9 +17,10 @@
         <meta name="apple-mobile-web-app-title" content="Librarie">
         <link rel="manifest" href="./resurse/imagini/favicon/site.webmanifest">
         <link rel="stylesheet" href="./resurse/css/general.css" type="text/css">
-        <link rel="stylesheet" href="./resurse/css/general500.css" type="text/css" media="screen and (max-width:500px)"/>
-        <link rel="stylesheet" href="./resurse/css/nav.css" type="text/css" />
-        <link rel="stylesheet" href="./resurse/css/nav500.css" type="text/css" media="screen and (max-width:500px)"/>
+        <link rel="stylesheet" href="./resurse/css/general1000.css" type="text/css" media="screen and (max-width:1000px)">
+        <link rel="stylesheet" href="./resurse/css/general500.css" type="text/css" media="screen and (max-width:500px)">
+        <link rel="stylesheet" href="./resurse/css/nav.css" type="text/css">
+        <link rel="stylesheet" href="./resurse/css/nav500.css" type="text/css" media="screen and (max-width:500px)">
         <!-- FONT PRIN GOOGLE API -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
