Adaugat icon animat

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                         
                     </li>
                     <li>
+                        <div class="img-icon" id="pag2-icon">
+                            <span class="fas fa-star fa-fade"></span>
+                        </div>
                         <a href="#desprenoi" id="pag2">Despre noi</a>
                         <ul>
                             <li><a href="#inspiratie" id="secinsp">Inspiratie</a></li>
