--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="img-icon" id="pag2-icon">
                             <span class="fas fa-star fa-fade"></span>
                         </div>
-                        <a href="#desprenoi" id="pag2">Despre noi</a>
+                        <a href="#desprenoi" id="pag2" class="txt-icon">Despre noi</a>
                         <ul>
                             <li><a href="#inspiratie" id="secinsp">Inspiratie</a></li>
                             <li><a href="#ceoferim" id="secofer">Ce oferim</a></li>
