Editari icon meniu

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
         <link rel="stylesheet" href="./resurse/css/general.css" type="text/css">
         <link rel="stylesheet" href="./resurse/css/general1000.css" type="text/css" media="screen and (max-width:1000px)">
         <link rel="stylesheet" href="./resurse/css/general500.css" type="text/css" media="screen and (max-width:500px)">
-        <link rel="stylesheet" href="./resurse/css/nav.css" type="text/css">
-        <link rel="stylesheet" href="./resurse/css/nav1000.css" type="text/css" media="screen and (max-width:1000px)">
-        <link rel="stylesheet" href="./resurse/css/nav500.css" type="text/css" media="screen and (max-width:500px)">
+        <!-- <link rel="stylesheet" href="./resurse/css/nav.css" type="text/css"> -->
+        <link rel="stylesheet" href="./resurse/scss/nav_output.css" type="text/css">
+        <!-- <link rel="stylesheet" href="./resurse/css/nav1000.css" type="text/css" media="screen and (max-width:1000px)"> -->
+        <link rel="stylesheet" href="./resurse/scss/nav1000_output.css" type="text/css" media="screen and (max-width:1000px)">
+        <!-- <link rel="stylesheet" href="./resurse/css/nav500.css" type="text/css" media="screen and (max-width:500px)"> -->
+        <link rel="stylesheet" href="./resurse/scss/nav500_output.css" type="text/css" media="screen and (max-width:500px)">
+        <link rel="stylesheet" href="./resurse/scss/nav500_anim_output.css" type="text/css" media="screen and (max-width:500px)">        
         <!-- FONT PRIN GOOGLE API -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,9 +41,9 @@
             <!-- În cadrul secțiunilor folosiți minim 2 taguri dintre următoare taguri de grupare: p, ol, ul, blockquote, dl -->
             <nav>
                 <label id="hamburger" for="ch-menu">
-                    <div class="img-icon" id="menu-icon">
-                        <span class="fa-solid fa-bars"></span>
-                    </div>
+                    <div id="linia1" class="linie"></div>
+                    <div id="linia2" class="linie"></div>
+                    <div id="linia3" class="linie"></div>
                 </label>
                 <input id="ch-menu" type="checkbox">
                 <ol class="meniu">
